# stamp

./: flake.nix  main.tf
nix/: overlay.nix
tf-support/: derivation.sh
tfmod/: build_and_push.sh  main.tf
tool/: default.nix  pyproject.toml
tool/stamptool/: common.py  extract_diffs.py  layer.py  layer_blob.py  layer_diff.py  main.py  nix_packing_plan.py  nix_store_layer_diff.py  patch.py  runtime.py
tool/testdata/closureinfo1/: registration
tool/testdata/image1/: index.json
tool/testdata/layer1/blob/: digest
tool/testdata/layer1/diff/: diff.tar  digest
tool/tests/: conftest.py  test_extract_diffs.py  test_layer.py  test_layer_blob.py  test_layer_diff.py  test_nix_packing_plan.py  test_nix_store_layer_diff.py  test_patch.py
